--- a/lib/QMBForm/build.gradle
+++ b/lib/QMBForm/build.gradle
@@ -16,12 +16,12 @@ buildscript {
 }
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     buildToolsVersion '28.0.3'
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 2
         versionName "1.1"
 
@@ -73,9 +73,9 @@ dependencies {
     implementation 'info.hoang8f:android-segmented:1.0.5'
     implementation 'com.wdullaer:materialdatetimepicker:2.5.0'
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    testImplementation 'org.hamcrest:hamcrest-core:1.2.1'
+    testImplementation 'org.hamcrest:hamcrest-core:1.3'
     testImplementation 'org.robolectric:robolectric:3.0'
 
 
@@ -85,6 +85,7 @@ dependencies {
     implementation "com.android.support:support-v4:$support_version"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.annotation:annotation:1.1.0'
 }
 
 apply plugin: 'idea'
@@ -120,7 +121,7 @@ apply plugin: "jacoco"
 
 jacoco {
     toolVersion = "0.7.1.201405082137"
-    reportsDir = file("$buildDir/reports/jacoco")
+//    reportsDir = file("$buildDir/reports/jacoco")
 }
 
 task jacocoTestReport(type: JacocoReport) {
@@ -146,12 +147,12 @@ task jacocoTestReport(type: JacocoReport) {
     reports {
         xml {
             enabled = true
-            destination = "${project.buildDir}/reports/jacoco/test/jacocoTestReport.xml"
+//            destination = "${project.buildDir}/reports/jacoco/test/jacocoTestReport.xml"
         }
         csv.enabled false
         html {
             enabled = true
-            destination = "${project.buildDir}/reports/jacoco"
+//            destination = "${project.buildDir}/reports/jacoco"
         }
     }
 }
